package ucf.assignments;

import javafx.collections.ObservableList;

public class EditToDoList {

    void editListTitle(ToDoList toDoList){
        //Edits the title of the to-do list
    }
    void removeList(ObservableList<ToDoList> allLists, ToDoList listRemoved){
        //Removes the specified to-do list from the list of to-do lists
    }
}
