package ucf.assignments;

public class FilterList {
    ToDoList showCompleteItems(ToDoList toDoList){
        //Iterates through the current to-do list object
        //If itemComplete == true, return these items
        return toDoList;
    }
    ToDoList showIncompleteItems(ToDoList toDoList){
        //Iterates through the current to-do list object
        //If itemComplete == false, return these items
        return toDoList;
    }
    ToDoList showAllItems(ToDoList toDoList){
        //Returns all items
        return toDoList;
    }
}
