package ucf.assignments;

public class LoadList {
    public void loadList() {
        //Create FileChooser class and allow user to choose csv file from their computer
    }
    public void loadAllLists(){
        //Loads multiple lists
    }
}


