package ucf.assignments;

public class SaveList {
    public void handleSave(){
        //Method that handles the saving of the new to-do list
        //Includes method saveFile
    }
    public void saveFile(){
        //Takes information from TableView and writes to file to be saved
    }
    public void saveAllFiles(){
        //Saves all to-do lists
    }
}
