@startuml
class ToDoListApplication{
}

class ToDoListController{
    +ArrayList<ToDoList> ToDoListArray
    --
    +void onCreateNewListClick()
    +void onRemoveToDoListClick()
    +void onAddNewItemClick()
    +void onRemoveItemClick()
    --
    +void onBackClick()
    +void onNewToDoOkClick()
    +void onToDoCancelClick()
    +void onNewItemOkClick()
    +void onNewItemCancelClick()
    --
    +void changeNameCellEvent()
    +void changeDueDateCellEvent()
    +void changeDescriptionCellEvent()
    +void onMarkCompleteClick()
    --
    +void onShowCompleteClick()
    +void onShowIncompleteClick()
    --
    +void onSaveToDoListClick()
    +void onLoadToDoListClick()
}

ToDoListController --* ToDoList : contains "many"

class ToDoList{
    -String listName
    -ObservableList<Item> itemList
    --
    +ObservableList<Item> getItemList()
    +void setItemList(ArrayList<Item> items)
    --
    +void addItem()
}
ToDoList - EditToDoList : changes <
class EditToDoList{
    +void editListTitle(ToDoList toDoList)
    +void removeList(ObservableList<ToDoList> allLists, ToDoList listRemoved)
}
SaveList - ToDoList : saves >
LoadList - ToDoList : loads >


ToDoList --* Item : contains "many"

class Item{
    -String itemName
    -String itemDesc
    -String itemDue
    -Boolean itemComplete
    --
    +String getItemName()
    +String getItemDesc()
    +String getItemDue()
    +Boolean getItemComplete()
    --
    +void setItemName(String itemName)
    +void setItemDesc(String itemDesc)
    +void setItemDue(String ItemDue)
    +boolean setItemComplete(boolean itemComplete)
}
Item - EditItem : changes <
class EditItem{
    +void editItemName (Item item))
    +void editItemDesc(Item item)
    +void editItemDate(Item item)
    +void editItemComplete(Item item)
    +void applyToItem(Item item)
    +void removeItem(ToDoList currentList, Item itemRemoved)
}


class FilterList{
    +void showCompleteItems(ToDoList toDoList)
    +void showIncompleteItems(ToDoList toDoList)
    +void showAllItems(ToDoList toDoList)
}

class SaveList{
    +void handleSave()
    +void saveFile()
    +void saveAllFiles()
}

class LoadList{
    +void loadList()
    +void loadAllLists()
}


@enduml